RESOLVED FIXED312881
[OpenXR] Missing OpenXR loader initialization for Android
https://bugs.webkit.org/show_bug.cgi?id=312881
Summary [OpenXR] Missing OpenXR loader initialization for Android
Sergio Villar Senin
Reported 2026-04-21 04:40:09 PDT
In order to locate the OpenXR loader in Android a XrLoaderInitInfoAndroidKHR must be filled in with the required data BEFORE any OpenXR call.
Attachments
Sergio Villar Senin
Comment 1 2026-04-21 05:12:05 PDT
EWS
Comment 2 2026-04-21 07:32:55 PDT
Committed 311678@main (ef3ccf8c385b): <https://commits.webkit.org/311678@main> Reviewed commits have been landed. Closing PR #63224 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-21 07:33:13 PDT
Note You need to log in before you can comment on or make changes to this bug.