[OpenXR] Missing OpenXR loader initialization for Android https://bugs.webkit.org/show_bug.cgi?id=312881

Reviewed by Adrian Perez de Castro.

Desktop clients do not generally need to do anything special with
regard to the OpenXR Loader. They just need to locate it in well defined
paths and us it. Unfortunately that is not as easy for Android apps.
They have to fill in a XrLoaderInitInfoAndroidKHR structure with some
data (like pointers to the JavaVM or the application context) in order
to properly initialize the loader.

Apart from filling in that structure we're moving the code around
because this initialization MUST be done before any call to OpenXR. The
current code was incorrectly trying to initialize the OpenXR extensions
first, resulting in multiple failures before failing to create a
session.

It depends on new API added to wpe-android in
https://github.com/Igalia/wpe-android/pull/254

No new tests as this is required for proper OpenXR runtime
initialization in device which is not testable ATM.

* Source/WebKit/UIProcess/XR/openxr/PlatformXROpenXR.cpp:
(WebKit::OpenXRCoordinator::createInstance):

Canonical link: https://commits.webkit.org/311678@main